--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
 	<link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
 
 	<!-- Font awesome 5 -->
-	<link href="fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
+	<link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
 
 	<!-- custom style -->
 	<link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
@@ -52,3 +52,4 @@
 	{% endblock %}
 
 	<!-- Footer -->
+	{% include 'includes/footer.html' %}
