--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% include 'base.html' %}
+{% extends 'base.html' %}
 
 {% load static %}
 
@@ -8,7 +8,7 @@
 	<div class="container">
 
 		<div class="intro-banner-wrap">
-			<img src="{% static 'images/cover.jpg' %}" class="img-fluid rounded">
+			<img src="{% static '/images/banners/1.jpg' %}" class="img-fluid rounded">
 		</div>
 
 	</div> <!-- container //  -->
@@ -49,7 +49,7 @@
 <!-- ========================= FOOTER ========================= -->
 
 <!-- ========================= FOOTER END // ========================= -->
-{% include 'includes/footer.html' %}
+
 </body>
 
 </html>
